--- a/styles/style.css
+++ b/styles/style.css
@@ -288,5 +288,11 @@ footer{
     color: rgba(255, 255, 255, 0.90);
 }
 .copyright{
-    
+color: rgba(255, 255, 255, 0.40);
+text-align: center;
+font-family: Lato;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
 }
